[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "statsmodels>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
